# patch_via_github

./: .gitignore  README.md  patch_via_github.ini.example  pyproject.toml
patch_via_github/: __init__.py
patch_via_github/scripts/: __init__.py  main.py
patch_via_github/tests/: __init__.py  conftest.py  manifest.xml  test_patch_via_github.py
