[project]
name = "patch-via-github"
version = "1.0.0"
description = "Tool used to modify a local 'repo sync' with changes from GitHub pull requests"
requires-python = "==3.12.3"
dependencies = [
    "certifi",
    "requests==2.27.1",
    "urllib3==1.26.20",
]

[project.scripts]
patch_via_github = "patch_via_github.scripts.main:main"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "flit>=3.2,<4",
    "pytest>=7.2.0",
]

[tool.pytest.ini_options]
testpaths = ["patch_via_github/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
